--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 
+	<script src="js/jquery.min.js"></script>
+	<script src="js/modernizr.js"></script>
+
+	<script>
+		$(window).load(function() {
+			// Animate loader off screen
+			$(".se-pre-con").fadeOut("slow");;
+		});
+	</script>
 	
 </head>
 
 <body>
+
+ 	
+<div class="se-pre-con"></div>
+
+
 <div id="progress" data-0="width:0%;background:rgb(133, 201, 66);" data-end="width:100%;background:rgb(133, 201, 66);"></div>
 
 <div id="skrollr-body">
