--- a/index.html
+++ b/index.html
@@ -442,8 +442,7 @@
 </div>
 </div>
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/enquire.min.js"></script>
+<!-- <script type="text/javascript" src="js/enquire.min.js"></script> -->
 <script type="text/javascript" src="js/skrollr.js"></script>
 <script type="text/javascript">
 
