--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta content="http://www.getedvice.com/infographic/" property="og:url" />
         <meta content="So what do most students go through to crack the JEE? A string of all nighters, endless question banks, anticipation and worry. Here is a story that we can relate to all too well!" property="og:description" />
         <meta content="http://www.getedvice.com/static/info/img/thumbShare.png" property="og:image" />
+				<meta name="viewport" content="width=360, initial-scale=1">
         <script src="js/jquery.min.js"></script>
     	<script>
     	$(document).ready(function() {
