--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta content="http://www.getedvice.com/infographic/" property="og:url" />
         <meta content="So what do most students go through to crack the JEE? A string of all nighters, endless question banks, anticipation and worry. Here is a story that we can relate to all too well!" property="og:description" />
         <meta content="http://www.getedvice.com/static/info/img/thumbShare.png" property="og:image" />
-				<meta name="viewport" content="width=360, initial-scale=1">
+				<meta name="viewport" content="initial-scale=1">
         <script src="js/jquery.min.js"></script>
     	<script>
     	$(document).ready(function() {
@@ -17,7 +17,10 @@
     	</script>
 
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
-    	<link rel="stylesheet" href="css/preloader.css">
+				<link rel="stylesheet" href="css/preloader.css">
+				<link rel="stylesheet" href="css/pure-min.css">
+				<link rel="stylesheet" href="css/styles.css">
+				<link rel="stylesheet" href="css/animate.min.css">
 
 
             <script>
@@ -124,9 +127,7 @@
 
 <div class="se-pre-con"></div>
 
-<link rel="stylesheet" href="css/pure-min.css">
-<link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="css/animate.min.css">
+
 
 <!-- <div class="mobile-hide">
 	<p>Coming soon on mobiles!</p>
