--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
         });
 
     });
+		
+		$(function() {
+        $('#boxclose1').click(function(){
+            $('#box1').animate({'top':'-100%'},200,function(){
+                $('#overlay1').fadeOut('fast');
+            });
+        });
+
+    });
+		
+	
+		$(function() {
+				if (screen.width < 1024) {
+						$('#overlay1').fadeIn(200,function(){
+                            $('#box1').animate({'top':'50px'},50);
+                        });
+				}
+    });
 
 
 	function submitSubscription(){
@@ -336,6 +354,22 @@
 	
 	
 </div>
+
+
+<div class="overlay" id="overlay1" style="display:none;"></div>
+
+<div class="box" id="box1">
+
+ <p>
+  Please select 'Request desktop site' option in your mobile browser for enhanced experience.
+ </p>
+ <p style="margin-top: 40px;"> <a class="boxclose1" id="boxclose1">Close</a></p>
+
+</div>
+
+
+
+
 </div>
 
 
@@ -626,6 +660,8 @@
   Thanks for subscribing!
  </p>
 </div>
+
+
 
 <!-- <div class="footer" data-37000="top:100%;" data-37500="top:40%">
 
