--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 	</div>
 	
 	
-	<div class="sceneFinal" data-24500="top:100%;" data-25000="top:0%;display:block;">
+	<div class="scene" data-24500="top:100%;" data-25000="top:0%;display:block;">
 		<div class="mob_dialogBatman" data-25000="opacity:1;top:0%;" data-25500="top:0%;" data-26000="top:-100%;">
 		</div>
 		
