--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </head>
     <body>
 
-<div class="se-pre-con"></div>
+<!-- <div class="se-pre-con"></div> -->
 
 
 
@@ -168,9 +168,9 @@
 
 
 
-
-<div id="mobile">
 <div id="skrollr-body">
+<div id="mobile">
+
 	<div class="scene homeSlide">
 	
 		<div class="pure-g center mobHeader">
@@ -707,7 +707,7 @@ if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
       }
 
 
-var s = skrollr.init(smoothScrolling=true,scale=5,easing='swing');
+var s = skrollr.init(smoothScrolling=true,scale=1,easing='swing');
 
 var slideTopPosisition = [0, 5000, 9000, 13700, 21200, 25000, 29500, 32300, 33200];
 
