--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ var s = skrollr.init(
 				scale=1,
 				easing='swing',
 				mobileCheck=function() {
-          return !(/Android|iPhone|iPad|iPod|BlackBerry/i).test(navigator.userAgent || navigator.vendor || window.opera);
+          return true;
 				}
 				); 
 
