--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
 
-<div id="skrollr-body">
+<div id="skrollr-body"> </div>
 <div id="mobile">
 
 	<div class="scene homeSlide">
@@ -375,7 +375,7 @@
 
 
 
-</div>
+
 
 
 
@@ -383,7 +383,7 @@
 
 
 <div id="desktop">
-<div id="skrollr-body">
+
 <div class="container">
 <div class="scene homeSlide" data-2700="top: 0%">
 			<div class="pure-g center header" data-1000="opacity:1;top:0%;" data-2500="opacity:0;top:-100%;">
@@ -679,7 +679,7 @@
 </div>
 </div>
 
-</div>
+
 
 
 
