--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     });
 		
 	
-		$(function() {
+		/*$(function() {
 				if (screen.width < 1024) {
 						$('#overlay1').fadeIn(200,function(){
                             $('#box1').animate({'top':'50px'},50);
                         });
 				}
-    });
+    }); */
 
 
 	function submitSubscription(){
@@ -356,7 +356,7 @@
 </div>
 
 
-<div class="overlay" id="overlay1" style="display:none;"></div>
+<!-- <div class="overlay" id="overlay1" style="display:none;"></div>
 
 <div class="box" id="box1">
 
@@ -365,7 +365,7 @@
  </p>
  <p style="margin-top: 40px;"> <a class="boxclose1" id="boxclose1">Close</a></p>
 
-</div>
+</div> -->
 
 
 
